2013-12-25  Allan Sandfeld Jensen  <sandfeld@kde.org>

	PR target/59422
	* gcc.target/i386/funcspec-5.c (test_fma, test_xop, test_no_fma,
	test_no_xop, test_arch_corei7, test_arch_corei7_avx,
	test_arch_core_avx2, test_arch_bdver1, test_arch_bdver2,
	test_arch_bdver3, test_tune_corei7, test_tune_corei7_avx,
	test_tune_core_avx2, test_tune_bdver1, test_tune_bdver2 and
	test_tune_bdver3): New function prototypes.

2013-12-24  Renlin Li  <Renlin.Li@arm.com>

	* gcc.target/arm/fixed_float_conversion.c: New test case.

2013-12-23  Bingfeng Mei  <bmei@broadcom.com>

	* gcc.dg/vect/vect-neg-store-1.c: New test.
	* gcc.dg/vect/vect-neg-store-2.c: Ditto.

2013-12-23  Bingfeng Mei  <bmei@broadcom.com>

	PR middle-end/59569
	* gcc.c-torture/compile/pr59569-1.c: New test.
	* gcc.c-torture/compile/pr59569-2.c: Ditto.

2013-12-23  Marek Polacek  <polacek@redhat.com>

	PR c++/59111
	* g++.dg/cpp0x/pr59111.C: New test.
	* g++.dg/cpp1y/pr59110.C: New test.

2013-12-22  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/x86_64/abi/callabi/func-2a.c (dg-do): Remove
	target selector.
	* gcc.target/x86_64/abi/callabi/func-indirect-2a.c (dg-do): Ditto.
	* gcc.target/x86_64/abi/callabi/vaarg-4a.c (dg-do): Ditto.
	* gcc.target/x86_64/abi/callabi/vaarg-5a.c (dg-do): Ditto.

2013-12-20  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/nested-apcs.c: New test.

2013-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/59255
	* g++.dg/tree-prof/pr59255.C: New test.

2013-12-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/neon-vceq_p64.c: New test.
	* gcc.target/arm/neon-vtst_p64.c: Likewise.

2013-12-20  Bingfeng Mei  <bmei@broadcom.com>

	PR tree-optimization/59544
	* gcc.target/i386/pr59544.c: New test.

2013-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59413
	* gcc.c-torture/execute/pr59413.c: New test.

	* c-c++-common/ubsan/load-bool-enum.c: New test.

2013-12-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
